--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,22 @@
 body {
+  background-color: #F2F2F2;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Lato';
+  margin: 0px;
+  min-height: 100%;
 }
+html {
+  font-family: 'Lato', sans-serif;
+  background-color: #F2F2F2;
+  margin: 0px;
+  min-height: 100%;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
