--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Lato'; 
   background-color: #F2F2F2;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
 }
 
 code {
@@ -19,4 +20,7 @@ html {
   font-family: 'Lato', sans-serif;
   background-color: #F2F2F2;
   margin: 0px;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
 }
