--- a/src/Button/Button.css
+++ b/src/Button/Button.css
@@ -1,5 +1,11 @@
 .btn.btn-rounded{
     background-color: #4D96CC;
+    opacity: 100%;
     color: #F6F6F6;
     letter-spacing: .030em;
+    border-radius: 20px;
+    width: 7em;
+    font-family: 'Lato';
+    font-weight: bold;
+    
 }
