--- a/src/LoginPanel/LoginPanel.css
+++ b/src/LoginPanel/LoginPanel.css
@@ -1,4 +1,24 @@
-.container-fluid#button{
+div#button{
     text-align: center;
+}
+
+div.container-fluid{
+    max-height: 51.9%;
+    max-width: 56.7%;
+    min-height: 51.9%;
+    min-width: 56.7%;
+    border: 0;
+    font-size: 1em;
+    border-radius: 15px;
+    position: fixed;
+    top: 26.67%;
+    left: 21.65%;
+    letter-spacing: .030em;
+}
+
+
+div#sign-up, div#forgot{
+    padding: 0;
+    margin: 0;
 }
 
