--- a/src/RegistrationLink/RegistrationLink.css
+++ b/src/RegistrationLink/RegistrationLink.css
@@ -1,6 +1,7 @@
-.container{
+div#links{
     color:#40BBF2;
     text-align: center;
-    font-weight: bolder;
+    font-weight: bold;
+    font-size: 1em;
     letter-spacing: .030em;
 }
