--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,15 @@ body {
   font-family: 'Lato';
   margin: 0px;
   min-height: 100%;
+  height: 100%;
+
 }
 html {
   font-family: 'Lato', sans-serif;
   background-color: #F2F2F2;
   margin: 0px;
   min-height: 100%;
+  height: 100%;
 }
 
 
