--- a/src/InputField/InputField.css
+++ b/src/InputField/InputField.css
@@ -4,14 +4,27 @@
     font-size: 1em;
 }
 
+div.form-group{
+    margin-bottom: 8%;
+    min-width: 52.2%;
+}
+
+
 .form-control{
     border-color: #DBDBDB;
     color: #969696;
     border-width: 2px;
     letter-spacing: .030em;
-    /* stroke-linejoin: miter;
+    opacity: 1;
+    filter: drop-shadow(0px 12px, 6px rgba(0, 0, 0, 0.161));
+    fill: rgba(255,255,255,1);
+    stroke: rgb(219, 219, 219);
+    stroke-width: 2px;
+    stroke-linejoin: miter;
     stroke-linecap: butt;
     stroke-miterlimit: 4;
-    shape-rendering: auto; */
+    shape-rendering: auto;
 }
+
+
 
