--- a/src/Panel/Panel.css
+++ b/src/Panel/Panel.css
@@ -1,12 +1,20 @@
 /*viewport example 1920 x 1080*/
 
-  div.card{
-    max-height: 100%;
-    max-width: 100%;
-    min-height:  100%;
-    min-width: 100%;
-    border: 0;
-    border-radius: 15px;
-    display: flex; 
+div.card{
+  min-height: 51.9vh;
+  height: 51.9vh;
+  min-width: 100%;
+  width: 100%;
+  border: 0;
+  border-radius: 15px; 
+  overflow-x: auto;
+  overflow-y: hidden;
 
+}
+
+div.card-body{
+  padding-top: 17.8%;
+  padding-bottom: 17.8%;
+  padding-left: 23.9%;
+  padding-right: 23.9%;
 }
